--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,8 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.game.esc.onetofifty.GameActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -18,7 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="축하합니다."
+            android:text="@string/title_1"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -34,7 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="초 만에 클리어 하셨습니다."
+            android:text="@string/title_2"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -58,7 +57,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn1"
                 android:layout_marginRight="5dp">
@@ -75,7 +74,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn2"
                 android:layout_marginRight="5dp">
@@ -91,7 +90,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn3"
                 android:layout_marginRight="5dp">
@@ -107,7 +106,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn4"
                 android:layout_marginRight="5dp">
@@ -123,7 +122,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn5">
 
@@ -145,7 +144,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn6"
                 android:layout_marginRight="5dp" >
@@ -161,7 +160,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn7"
@@ -177,7 +176,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn8"
@@ -193,7 +192,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn9"
@@ -209,7 +208,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn10"
                 >
@@ -231,7 +230,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn11"
@@ -248,7 +247,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn12"
@@ -264,7 +263,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn13"
@@ -280,7 +279,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn14"
@@ -296,7 +295,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn15"
                 >
@@ -317,7 +316,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn16"
@@ -335,7 +334,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn17"
@@ -351,7 +350,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn18"
@@ -367,7 +366,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn19"
@@ -383,7 +382,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn20"
                 >
@@ -404,7 +403,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn21"
@@ -422,7 +421,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn22"
@@ -438,7 +437,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn23"
@@ -454,7 +453,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:id="@+id/btn24"
@@ -470,7 +469,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn25"
                 >
